@@ -174,6 +174,7 @@
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <forkCount>${test-forkCount}</forkCount>
             <reuseForks>false</reuseForks>
+            <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
           </configuration>
         </plugin>
       </plugins>
